Fix for the first filtered notification requests being uninteractable in Modern themes due to positioning (and blocking visibility of the Edit/selection bar)

--- a/app/javascript/flavours/glitch/styles/modern-urusai-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/modern-urusai-fixes.scss
@@ -112,3 +112,7 @@ body.app-body.flavour-glitch > #mastodon .notification-ungrouped {
     display: flex;
   }
 }
+
+.notification-request {
+  margin-top: 60px;
+}
